--- a/index.html
+++ b/index.html
@@ -41,7 +41,21 @@
 
 <!--Footer-->
 <footer>
-    
+    <div class="footer-content-one">
+        <div class="footer-content-one-sub">
+            <a href="#">Advertising</a>
+            <a href="#">Business</a>
+            <a href="#">How Search works</a>
+        </div>
+    </div>
+
+    <div class="footer-content-two">
+        <div>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Settings</a>
+        </div>
+    </div>
 </footer>
 <!--Footer End-->
 
